--- a/endmatter/CV.tex
+++ b/endmatter/CV.tex
@@ -7,29 +7,31 @@
 \begin{personaldata}
     \name{Seungtaek Lee}
     \dateofbirth{1990}{02}{24}
+    \birthplace{Pohang}
     \email{seungtaek.lee@postech.ac.kr}
 \end{personaldata}
 
 % @environment education 학력
 % @options [default: (none)] - 수학기간을 입력
 \begin{education}
-	\item[2015. 03.\ --\ 2021. 08.] Department of Physics, Pohang University of Science and Technology (Ph.D.)
-	\item[2008. 03.\ --\ 2015. 02.] Department of Physics, Pohang University of Science and Technology (B.S.)
+    \item[2015. 03.\ --\ 2021. 08.] Ph.D. in Plasma Physics, POSTECH
+    \item[2008. 03.\ --\ 2015. 02.] B.S. in Physics, POSTECH
+    \item[2006. 03.\ --\ 2008. 02.] Pohangjecheol High School (Early Graduation)
 \end{education}
 
 % @environment experience 경력
 % @options [default: (none)] - 해당기간을 입력
 \begin{experience}
-	\item[2016. 09.\ --\ 2016. 12.] Teaching Assistant for Computers for Physics (especially, Matlab), Postech
-	\item[2015. 09.\ --\ 2015. 12.] Teaching Assistant for General Physics II, Postech
-	\item[2015. 03.\ --\ 2015. 06.] Teaching Assistant for General Physics I, Postech
-	\item[2011. 04.\ --\ 2013. 01.] Military Service in Republic of Korea Marine Corps Command, Hawseong
+    \item[2016. 09.\ --\ 2016. 12.] Teaching Assistant for Computers for Physics (especially, Matlab), POSTECH
+    \item[2015. 09.\ --\ 2015. 12.] Teaching Assistant for General Physics II, POSTECH
+    \item[2015. 03.\ --\ 2015. 06.] Teaching Assistant for General Physics I, POSTECH
+    \item[2011. 04.\ --\ 2013. 01.] Military Service in Republic of Korea Marine Corps Command, Hawseong
 \end{experience}
 
 % @environment fellowship 장학금
 % @options [default: (none)] - 해당기간을 입력
 \begin{fellowship}
-	\item[2019. 09.\ --\ 2020. 08.] NRF Fellowship for Ph.D. Research, under the program of “Fostering the Next Generation Researchers” by National Research Foundation (NRF) of Korea
+    \item[2019. 09.\ --\ 2020. 08.] NRF Fellowship for Ph.D. Research, under the program of “Fostering the Next Generation Researchers” by National Research Foundation (NRF) of Korea
 \end{fellowship}
 
 % @environment interest 관심분야
@@ -43,18 +45,21 @@
 % @environment publication 연구업적
 % @options [default: (none)] - 연구업적 입력    
 \begin{publication}
-    \item \underline{S. Lee}, J. Lee, Y. Kim, S. Jeong, D. E. Kim, G. Yun, Quasi-equilibrium phase separation in single-component supercritical fluids, \textit{Nat. Commun. Provisionally Accepted (2021)}
-    \item J. Lee, W. J. Nam, \underline{S. Lee}, J. K. Lee and G. S. Yun, Sheath and bulk expansion induced by RF field in atmospheric pressure microwave plasma, \textit{Plasma Sources Sci. Technol.} \textbf{27}, 075008 (2018)
-    \item W. J. Nam, \underline{S. Lee}, S. Y. Jeong, J. K. Lee and G. S. Yun, Asymmetric frequency dependence of plasma jet formation in resonator electrode, \textit{Eur. Phys. J. D} \textbf{71}:134 (2017)
-    \item \underline{S. Lee}, W. J. Nam, J. K. Lee and G. S. Yun, In situ impedance measurement of microwave atmospheric pressure plasma \textit{Plasma Sources Sci. Technol.} \textbf{26}, 045004 (2017)
+    \item \underline{S. Lee}, J. Lee, Y. Kim, S. Jeong, D. E. Kim, G. Yun, Quasi-equilibrium phase separation in single-component supercritical fluids, \textit{Nat. Commun. Accepted (2021)}
+    \item J. Lee, W. J. Nam, \underline{S. Lee}, J. K. Lee and G. S. Yun, Sheath and bulk expansion induced by RF field in atmospheric pressure microwave plasma, \href{https://iopscience.iop.org/article/10.1088/1361-6595/aac14e}{\textit{Plasma Sources Sci. Technol.} \textbf{27}, 075008 (2018)}
+    \item W. J. Nam, \underline{S. Lee}, S. Y. Jeong, J. K. Lee and G. S. Yun, Asymmetric frequency dependence of plasma jet formation in resonator electrode, \href{https://link.springer.com/article/10.1140/epjd/e2017-70549-4}{\textit{Eur. Phys. J. D} \textbf{71}:134 (2017)}
+    \item \underline{S. Lee}, W. J. Nam, J. K. Lee and G. S. Yun, In situ impedance measurement of microwave atmospheric pressure plasma, \href{https://iopscience.iop.org/article/10.1088/1361-6595/aa5d26}{\textit{Plasma Sources Sci. Technol.} \textbf{26}, 045004 (2017)}
 \end{publication}
 
 % @environment interest 학회발표
 % @options [default: (none)] - 학회발표 입력
 \begin{conference}
-    \item \textbf{(Best Student Poster Presentation Award)} \underline{S. Lee}, J. H. Lee, D. E. Kim, G. S. Yun, Dense plasma in supercritical argon fluid with long-lived clusters, \textit{72nd Gaseous Electronics Conference (APS)}, College Station, Texas, Oct. 28 – Nov. 1, 2019
-    \item \textbf{(Best Student Oral Presentation Award)} \underline{S. Lee}, J. H. Lee, D. E. Kim, G. S. Yun, The laser plasma on supercritical argon with clusters, \textit{2019 KPS Spring Meeting}, Daejeon, Korea, Apr. 24 - 26, 2019
-    \item \underline{S. Lee}, J. H. Lee, D. E. Kim, G. S. Yun, Long-lived plasma produced by short pulse laser in argon supercritical fluid with high density of clusters, \textit{2018 KPS Fall Meeting}, Changwon, Korea, Oct. 24 26, 2018
-    \item \underline{S. Lee}, W. J. Nam, J. K. Lee, G. S. Yun, In situ impedance measurement of microwave atmospheric pressure plasma, \textit{2017 KPS Spring Meeting}, Daejeon, Korea, Apr. 19 - 21, 2017
-    \item \underline{S. Lee}, W. J. Nam, G. S. Yun, On the discharge mechanism of the coaxial transmission microwave atmospheric pressure plasma, \textit{2015 KPS Fall Meeting}, Geongju, Korea, Oct. 21 - 23, 2015
+    \item \textbf{(Best Student Poster Presentation Award)} \underline{S. Lee}, J. Lee, D. E. Kim, G. S. Yun, Dense plasma in supercritical argon fluid with long-lived clusters, \href{http://meetings.aps.org/Meeting/GEC19/Session/MW1.64}{\textit{72nd Gaseous Electronics Conference (APS)}}, College Station, Texas, Oct. 28 -- Nov. 1, 2019
+    \item G. S. Yun, \underline{S. Lee}, J. Lee, S. Jeong, Y. Kim, J. Ji, Plasma in supercritical fluid with densely populated clusters, \href{https://meetings.aps.org/Meeting/DPP19/Session/YP10.67}{\textit{61st Annual Meeting of the APS Division of Plasma Physics}}, Fort Lauderdale, Florida, Oct. 21 -- 25, 2019
+    \item J. Lee, \underline{S. Lee}, D. E. Kim, G. S. Yun, Characterization of long-lived clusters in supercritical fluid using Rayleigh-Mie scattering and effects on laser plasma, \textit{2019 KPS Fall Meeting}, Gawngju, Korea, Oct. 23 -- 25, 2019
+    \item \textbf{(Best Student Oral Presentation Award)} \underline{S. Lee}, J. Lee, D. E. Kim, G. S. Yun, The laser plasma on supercritical argon with clusters, \textit{2019 KPS Spring Meeting}, Daejeon, Korea, Apr. 24 -- 26, 2019
+    \item \underline{S. Lee}, J. Lee, G. S. Yun, Long-lived plasma produced by short pulse laser in argon supercritical fluid with high density of clusters, \href{http://ph.postech.ac.kr/~ypw11/program.html}{\textit{11th BK21+ Young Physicists Workshop}}, Pohang, Korea, Feb. 14 -- 15, 2018
+    \item \underline{S. Lee}, J. Lee, D. E. Kim, G. S. Yun, Long-lived plasma produced by short pulse laser in argon supercritical fluid with high density of clusters, \textit{2018 KPS Fall Meeting}, Changwon, Korea, Oct. 24 -- 26, 2018
+    \item \underline{S. Lee}, W. J. Nam, J. K. Lee, G. S. Yun, In situ impedance measurement of microwave atmospheric pressure plasma, \textit{2017 KPS Spring Meeting}, Daejeon, Korea, Apr. 19 -- 21, 2017
+    \item \underline{S. Lee}, W. J. Nam, G. S. Yun, On the discharge mechanism of the coaxial transmission microwave atmospheric pressure plasma, \textit{2015 KPS Fall Meeting}, Geongju, Korea, Oct. 21 -- 23, 2015
 \end{conference}
