--- a/endmatter/acknowledge.tex
+++ b/endmatter/acknowledge.tex
@@ -1,5 +1,20 @@
 %!TEX root = ../thesis.tex
 % Acknowledge
+    
+6년 반이라는 긴 시간이었지만 여전히 부족했던 저의 학위 과정이 마무리되었습니다. 물리학자가 되겠다는 꿈을 안고 이 학교에 입학한 지도 13년이 넘었고, 길지 않은 인생의 4할을 포스텍 학생으로 공부했습니다. 이제 막 고등학교를 졸업하고 열아홉이던 꼬마는 어느새 서른한 살이 되어 세상에는 얼마나 배울 것이 많은지, 그리고 또 스스로는 얼마나 한없이 부족한지를 깨닫습니다. 박사 학위 주제를 끝까지 탐구하기 위해 밤낮으로 수 없는 시행착오를 반복하며 고군분투했던 지난날의 경험은 수많은 선배 과학자들이 이처럼 눈부시게 이룩한 업적을 과연 어떻게 가능하게 하였는지를 알아차리게 해주었습니다. 긴 학업과 수련의 과정을 거쳐 `과학 하는' 방법을 배웠고, 선대 과학자들의 유산 위에서 인류의 지적 호기심을 체계적으로 탐구하는 즐거움을 느꼈습니다. 돌이켜보면, 이때에 이르는 동안 단 하나의 어떠한 과정에서도 저 스스로만의 힘으로 나아간 경우는 없었으며, 수없이 많은 분의 도움이 모든 것을 가능하게 하였습니다.
 
-한글로 감사의 글 작성.
+가장 먼저, 저의 박사 학위를 지도해 주신 윤건수 교수님께 무한한 존경의 마음과 감사의 인사를 드립니다. 연구 참여를 시작할 때부터 지금까지 교수님께서는 절대적으로 저를 지지해 주셨습니다. 제가 이 연구실에 들어와서 교수님과의 인연이 시작된 것이 얼마나 우연한 일인지를 생각할 때면, 그것이 제 인생에서 더할 나위 없는 행운이었음을 알아차리는 것은 전혀 어렵지 않습니다. 갓 대학을 졸업한 학생이 당연하게도 지식과 경험이 부족하였겠지만, 그마저도 기대 이하였을 저에게 수없이 많은 시간을 할애하여 수식 한줄 한줄을 짚어가며 강의하시고, 심지어 실험 과정에서 어려움을 겪을 때는 자정을 넘어서까지 함께 도와주신 것은 절대 당연한 일이 아니라는 것을 잘 알고 있습니다. 그뿐만 아니라 대학원 입학과 동시에 결혼하고, 둘째가 네 살이 된 지금까지 육아와 학위 과정을 병행하는 것은 교수님께서 베풀어주신 글자 그대로의 물심양면의 지원이 없었다면 결코 가능하지도 않았을 일입니다. 교수님께 배운 수많은 지식과 지혜를 되새기며 살아가겠습니다.
+
+저는 또 다른 세 분의 교수님께 많은 것을 배우고, 좋은 학자로 성장하기 위한 아낌없는 조언을 받았습니다. 이재구 교수님, 김동언 교수님 그리고 지정영 교수님께 깊은 감사를 드립니다. 이재구 교수님께서는 제가 막 연구하기 시작할 무렵부터 항상 옆에서 지켜봐 주시고, 연구의 방향을 제시해 주셨습니다. 제가 길을 잃지 않도록 조언해주신 덕분에 학위 과정 초반에 소기의 성과를 달성할 수 있었고, 연구에 대한 자신감을 가질 수 있었습니다. 김동언 교수님께서는 제가 학위 과정의 중반부터 새롭게 시작한 연구를 가장 가까이서 도와주셨습니다. 직접적인 지도 학생이 아님에도 주기적으로 시간을 할애하여 연구 과정을 살펴봐 주셨습니다. 그뿐만 아니라 언제나 학위를 받은 후의 더 먼 미래까지 생각할 수 있는 시야를 갖도록 경험을 공유해 주셨습니다. 객관적인 위치에서 전해주시는 말씀은 언제나 특별하게 다가왔고, 앞으로도 늘 잊지 않겠습니다. 지정영 교수님께서는 포항을 방문하실 때면 언제나 학생들과 시간을 보내는 데 주저 함이 없으셨습니다. 대화는 다양한 주제로 퍼져나갔고, 그 언제나 논리적인 연결고리가 명백하게 드러날 때까지 파고드는 과학자의 태도를 보여주셨습니다. 어렴풋이 상상하고 동경하던 이상향을 실천하시는 모습은 제 평생의 귀감으로 남을 것입니다.
+
+저마다의 꿈과 목표를 갖고, 이 장소, 이 시간을 함께 공유한 수많은 선, 후배들께도 감사의 인사를 드립니다. 신입생의 호기로움 외에는 가진 게 없었던 저에게 연구실 생활이며, 실험 기구 사용법, 데이터 분석 방법 등 이루 다 열거할 수 없을 만큼 많은 부분에서 선배님들의 도움을 받았습니다. 졸업 후 연구실을 떠나 각자의 위치에서 최선을 다하고 계실 재현, 민우, 민준, 윤범, 지훈, 지은, 경현, 준억, 민호 박사님들께 받은 만큼 저도 후배들에게 베풀기 위해 노력했으나 여전히 어림없다고 생각합니다. 비슷한 시기에 같은 연구를 하며 가장 많은 시간을 함께 보낸 우진, 석용, 민욱, 지모에게 고마움을 갖고 있습니다. 이번에 함께 졸업하게 된 민욱이는 지금까지와 같이 앞으로도 늘 성공적인 연구를 해내길 바랍니다. 그리고 곧 졸업을 앞둔 우진, 석용, 지모도 각자의 연구를 잘 마무리하여 소기의 성과를 달성하길 기원합니다. 그리고 가장 최근까지 실험 활동을 함께 수행한, 항상 성실한 주호에게 특별한 고마움을 전하고 싶습니다. 같은 연구를 수행하게 되면서 자연스레 많은 일을 함께하게 되었는데, 언제나 여지없고, 까다로운 선배의 지시를 잘 따라주어 연구를 효율적이고 원활하게 수행할 수 있었습니다. 조만간 연구 주제를 구체화하여 성공적으로 박사 학위 연구를 할 수 있기를 바랍니다. 연구실의 규모가 커지고, 연구 주제가 다양해지면서 이전만큼 많은 시간을 함께하지는 못하지만, 여전히 함께 공부하고, 생활해온 재민, 동권, 영욱, (송)우진, 혜린, 세현, 승준, 경태, 태영, 형구 그리고 동재까지 모두 열심히 노력해서 원하는 성과를 이루길 바랍니다.
+
+2008년 당시 대학에 함께 들어와 처음 인연을 맺은 후, 지금까지도 서로의 인생에 관심을 기울이며 격려해주는 동기들은 언제나 큰 힘이 되었습니다. 돌이켜보면 이제는 어떻게도 다시 돌아갈 수 없는 그 시기의 소중한 추억을 철호, 소영, 성훈, 영선, 관호, 승준, 정준과 함께 쌓았고, 그 덕에 더욱 즐거웠습니다. 앞으로도 언제까지나 우정을 나누며 함께 인생을 살아갈 수 있길 기원합니다. 24대 학과협 동기들과 처음 만났던 2009년의 겨울이 기억납니다. 각 학과 구성원들의 지지를 받고 부여받은 직책을 성실히 수행하기 위해 1년 내내 수시로 만나며 의견을 나눴습니다. 효민, 성환, 원길, 민혁, 대현, 수빈, 홍희, 연희 준세 모두 그 인연을 시작으로 지금까지 저마다의 기념일을 챙겨 오며 서로 힘이 되어주고 있습니다. 그때나 지금이나 함께라서 행복했고, 언제나 또다시 만나 함께하길 고대하고 있습니다.
+
+어린 시절부터 수많은 은사님께 참 많은 신세를 지었고, 그분들의 노력이 헛되지 않았음을 보여드리기 위해 여전히 노력하고 있습니다. 원칙을 저버리고 현실과 타협하고자 하는 유혹이 들 때마다 류봉선 관장님의 가르침을 기억합니다. 올바른 일이라면 그것으로 나아간다는 원칙은 제 인생에서 많은 고민에 대한 해답을 주었고, 앞으로도 늘 따르고 나아갈 삶의 기준이 되었습니다. 학창 시절 물리와 수학을 가르쳐주시고, 제가 이 길을 선택하는 데 아낌없이 응원을 해주신 김유숙 선생님, 전진욱 선생님, 이경환 선생님께도 감사를 드립니다. 선생님께서 당시 하셨던 말씀들은 시간이 지나며 더욱 선명해졌고, 가르침은 훨씬 더 오래 이어졌습니다.
+
+오랫동안 공부하는 저를 위해 모든 지원을 아낌없이 베풀어준 사랑하는 가족에게 언제나 고마움을 간직하고 있습니다. 한결같이 제 결정을 지지해 주시고, 오랜 시간 믿고 기다려주신 부모님께는 다 갚지 못할 사랑을 받았습니다. 부모님의 은혜로 올바른 가치관을 형성할 수 있었고, 사회에 기여할 수 있는 구성원으로 이만큼 성장할 수 있었음은 언제나 천운이라고 생각하며, 감사드립니다. 마지막으로 사랑하는 아내 형주에게 한없는 고마움을 전합니다. 밤낮도 없고, 쉬는 날에 쉬는 것이 사치이자 시간 낭비라고 생각하며 보냈던 대학원 생활 내내 곁에서 그 모든 것을 감내하며 지지해준 것을 잊을 수 없습니다. 부족한 제 글솜씨로는 고마움을 이루 다 표현할 수 없으리라는 것을 걱정하기보다, 앞으로 평생 함께하며 조금이나마 갚아나갈 기회가 있다는 것에 안도하고자 합니다.
+
+끝으로 짧은 인생에 일일이 거명할 수 없을 만큼 수많은 소중한 인연이 있었다는 것을 다시 한번 생각하면서, 평생 감사하는 마음으로 살아가겠습니다.
+
 
